<resources>
    <string name="app_name">Actividad #1</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="result">Tu resultado</string>
    <string name="recalculate">Re-calcular</string>

    <string name="error">Error</string>

    <string name="title_bajo_peso">Bajo peso</string>
    <string name="description_bajo_peso">Estás por debajo de lo óptimo para tu peso y altura.</string>

    <string name="title_normal_peso">Normal</string>
    <string name="description_normal_peso">Estás en lo óptimo para tu peso y altura.</string>

    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Estás en por encima de lo óptimo para tu peso y altura.</string>

    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estás MUY por encima de lo óptimo para tu peso y altura.</string>

    <string name="favorites">Solución Actividad #1</string>
    <string name="title_favorites">Bienvenido a la aplicación Android de la Actividad #1</string>
    <string name="description_favorites">Hemos pensado crear esta aplicación que permite administrar mis peliculas, series, canciones, deportes y libros favoritos. Agregando nuevos títulos favoritos agrupadas por tipo de contenido. Este listado de favoritos puede tacharse o reclasificarse</string>
    <string name="copyright_favorites">Desarrollado por: Jaime - Miguel - Johan</string>

    <string name="title_list_favorites">Mi listado de favoritos</string>
    <string name="title_type_media">Tipo de contenido</string>
    <string name="title_favorites_content">Selección de favoritos</string>
    <string name="hint_dialog_new_favorite">Escribir nuevo favorito</string>
    <string name="text_button_new_favorite">Crear favorito</string>

    <string name="ContentTypeMediaSeries">Series</string>
    <string name="ContentTypeMediaPeliculas">Pelicula</string>
    <string name="ContentTypeMediaCanciones">Canciones</string>
    <string name="ContentTypeMediaLibros">Libros</string>
    <string name="ContentTypeMediaDeportes">Deportes</string>
    <string name="ContentTypeMediaVarios">Varios</string>

    <string name="text_menu_saludar">Aplicación Saludar (Vista en clase)</string>
    <string name="text_menu_imc">Aplicación IMC (Vista en clase)</string>

    <string name="title_create_favorite_one">Tutorial crear favorito - Paso #1</string>
    <string name="title_create_favorite_two">Tutorial crear favorito - Paso #2</string>
    <string name="step_one_tutorial">Primero debes dar clic en la parte inferior derecha sobre el botón de agregar favorito</string>
    <string name="step_two_tutorial">Se abrirá un dialogo que permite digitar el nombre del favorito y seleccionar su respectivo tipo de contenido</string>
    <string name="step_three_tutorial">Una vez terminada la digitación y selección dar clic en crear favorito</string>
    <string name="step_four_tutorial">Ahora se muestran los tipos de contenido en la parte superior para que sean seleccionados y luego se desplegan los favoritos pertenecientes a cada contenido</string>

    <string name="step_five_tutorial">Si seleccionas varios tipos de contenido los favoritos se van agrupando para verlos todos juntos</string>
    <string name="step_six_tutorial">También existe la opción de cancelar o eliminar un favorito, dando clic sobre el mismo se tacha indicando que ha sido cancelado</string>
    <string name="step_seven_tutorial">Finalmente el listado total va acumulando tanto cancelados como activos</string>

    <string name="text_button_end_tutorial">Salir de tutorial</string>
    <string name="text_button_next">Siguiente</string>

</resources>