<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MenuAppActivity"
    android:background="@color/white"
    >

    <!--
    <Button
        android:id="@+id/btnSaludar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Saludar"/>

    <Button
        android:id="@+id/btnIMC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Calcular IMC"/>
    -->


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/img_logoviu"
            app:tint="@color/background_primary" />

        <TextView
            android:id="@+id/tvTitleMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_favorites"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginVertical="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="@string/description_favorites"
            android:layout_marginVertical="50dp"/>

        <Button
            android:id="@+id/btnFavoritos"
            android:backgroundTint="@color/background_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorites"
            android:textColor="@color/white"
            android:layout_marginVertical="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/copyright_favorites"
        android:textAlignment="center" />


</LinearLayout>