<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activities.FavoritesActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/background_primary"
        android:layout_marginTop="20dp"
        android:text="@string/title_list_favorites"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_type_media"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textSize="22dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTypeMedia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:text="@string/title_favorites_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textSize="22dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFavorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"/>

</LinearLayout>